# analyticallabware

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
AnalyticalLabware/: __init__.py
AnalyticalLabware/analysis/: base_spectrum.py  mnova.py  spec_utils.py  utils.py
AnalyticalLabware/devices/: __init__.py  chemputer_devices.py
AnalyticalLabware/devices/Advion/: __init__.py  advion_cms.py  advion_data.py  build-clang.bat  build.bat  config.py  enums.py  errors.py  interop.py  wrapper.py
AnalyticalLabware/devices/Agilent/: chemstation.py  chromatogram.py  hplc.py  hplc_logging.py  hplctalk.mac
AnalyticalLabware/devices/Bruker/: client.py  download_packages.ps1  enums.py  install.bat  otofcontrol.py  requirements.txt  server.py
AnalyticalLabware/devices/DrDAQ/: README.md  __init__.py  pH_module.py
AnalyticalLabware/devices/IDEX/: mxii_valve.py  mxii_valve_sl1.py  mxii_valve_sl2.py
AnalyticalLabware/devices/Magritek/: RemoteControl.xsd  spectrum.py  spinsolve.py
AnalyticalLabware/test/: test_hplc.py  test_spinsolve.py
devices/Advion/: advion.pyd  expression_CMS.py
devices/Magritek/: ProtocolOptions.xml  __init__.py  messages.py  setup.py  spectrum.py  spinsolve.py  util.py
docs/Guide/: analytical instruments guide.md
merge_request_templates/: Default.md
test/: default.method  defaultNegative.tune  graph_chemputer.json  negativeAPCI.ion  negativeESI.ion  positiveAPCI.ion  positiveESI.ion  test_advion_wrapper.py  test_idex.py  test_spinsolve.py  test_spinsolve_spectrum.py
(+55 files in other folders)
