[metadata]
name = AnalyticalLabware
version = 2.1.0
description = Analytical instruments for the Chemputer
url = https://gitlab.com/croningroup/chemputer/analyticallabware

[options]
python_requires = >=3.8
install_requires =
  scipy
  matplotlib
  numpy
packages = find:
setup_requires =
  setuptools
zip_safe = False

[options.packages.find]
include = AnalyticalLabware*

[options.extras_require]
advion =
  pythonnet
oceanoptics =
  seabreeze
spinsolve =
  nmrglue
all =
  pythonnet
  seabreeze
  nmrglue
testing =
  pytest
  coverage
  memory_profiler
chemputer =
  SerialLabware @ git+ssh://git@gitlab.com:croningroup/chemputer/seriallabware.git
  chemputerapi @ git+ssh://git@gitlab.com:croningroup/chemputer/chemputerapi.git
  commanduinolabware @ git+ssh://git@gitlab.com:croningroup/chemputer/commanduinolabware.git
